android gradle config

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,15 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
+
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven,aliyun.com/repository/jcenter' }
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+            allowInsecureProtocol = true
+        }
     }
 
     dependencies {
@@ -13,8 +20,15 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
+
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven,aliyun.com/repository/jcenter' }
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+            allowInsecureProtocol = true
+        }
     }
 }
 
