--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.0
   path_provider: ^2.0.15
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
