--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 //        mavenCentral()
 
         maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven,aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven {
             url 'http://maven.aliyun.com/nexus/content/groups/public'
             allowInsecureProtocol = true
@@ -24,7 +24,7 @@ allprojects {
 //        mavenCentral()
 
         maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven,aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven {
             url 'http://maven.aliyun.com/nexus/content/groups/public'
             allowInsecureProtocol = true
