--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   device_info_plus: ^9.0.2
   grpc: ^3.2.3
   protobuf: ^3.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
