--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   protobuf: ^3.0.0
   intl: ^0.18.1
   flutter_dash: ^1.0.0
+  qr_flutter: ^4.1.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
