--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_dash: ^1.0.0
   qr_flutter: ^4.1.0
   fluttertoast: ^8.2.2
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
