--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-//        google()
-//        mavenCentral()
+        google()
+        mavenCentral()
 
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
@@ -20,8 +20,8 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
-//        mavenCentral()
+        google()
+        mavenCentral()
 
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
