--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
 #   - asset/images/img_wallet.png
 #   - asset/images/btn_new_wallet.png
    - asset/images/
+   - asset/config/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
