--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,9 @@ dependencies:
   extension_google_sign_in_as_googleapis_auth: ^2.0.10
   email_validator: ^2.1.17
   crypto: ^3.0.3
-  shared_preferences: ^2.0.8
+  web3dart: ^2.7.1
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
