--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   web3dart: ^2.7.1
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
