--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.0
   http: ^1.1.0
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
