--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shared_preferences: ^2.2.0
   http: ^1.1.0
   decimal: ^2.3.3
+  flutter_stripe: ^9.3.0
 
 dev_dependencies:
   flutter_test:
