--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,8 @@ dependencies:
   event_bus: ^2.0.0
   flutter_credit_card: ^3.0.7
   rflutter_alert: ^2.0.7
-
+  webview_flutter: ^4.2.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
