--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_credit_card: ^3.0.7
   rflutter_alert: ^2.0.7
   webview_flutter: ^4.2.3
+  country_picker: ^2.0.21
   
 dev_dependencies:
   flutter_test:
