--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   rflutter_alert: ^2.0.7
   webview_flutter: ^4.2.3
   country_picker: ^2.0.21
+  pull_to_refresh: ^2.0.0
   
 dev_dependencies:
   flutter_test:
