--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ dependencies:
   webview_flutter: ^4.2.3
   country_picker: ^2.0.21
   pull_to_refresh: ^2.0.0
-  
+  calendar_date_picker2: ^0.5.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
